[package]
edition = "2021"
name = "rs_service_util"
version = "0.1.0"

[dependencies]
actix = "0.13.5"
actix-web = "4"
chrono = "0.4.31"
derive_more = {version = "1.0.0", features = ['full']}
env = "0.1.0"
env_logger = "0.11.5"
log = {version = "0.4.20", features = ["std", "serde"]}
rbatis = {version = "4.5"}
rbs = {version = "4.5"}
redis = {version = "0.27.5", features = ["tokio-comp", "cluster"]}
redis-macros = "0.4.2"
serde = {version = "1", features = ["derive"]}
serde_json = "1"
simple-base64 = "0.23.2"
